--- a/training/11_editing_provenance.Rmd
+++ b/training/11_editing_provenance.Rmd
@@ -2,7 +2,7 @@
 
 ## Introduction
 
-The provenance chain describes the origin and processing history of data. Provenance can exist on a continuum, ranging from prose descriptions of the history, to formal provenance traces, to fully executable environments. In this section we will describe how to build provenance using formal provenance traces in DataONE.
+The provenance chain describes the origin and processing history of data. Provenance (or "prov") can exist on a continuum, ranging from prose descriptions of the history, to formal provenance traces, to fully executable environments. In this section we will describe how to build provenance using formal provenance traces in DataONE.
 
 Provenance is becoming increasingly important in the face of what is being called a reproducibility crisis in science. J. P. A. Ioannidis (2005) wrote that “Most Research Findings Are False for Most Research Designs and for Most Fields”. Ioannidis outlined ways in which the research process has lead to inflated effect sizes and hypothesis tests that codify existing biases.
 
@@ -10,41 +10,41 @@ The first step towards addressing these issues is to be able to evaluate the dat
 
 And yet, this is easily remedied. Researchers can achieve computational reproducibility through open science approaches, including straightforward steps for archiving data and code openly along with the scientific workflows describing the provenance of scientific results (e.g., Hampton et al. (2015), Munafò et al. (2017)).
 
-At NCEAS and in the datateam, not only do we archive data and code openly, but we also describe the workflows that involve that data and code using provenance, formalizing the provenance trace for a workflow that might look like this ![workflow](images/workflow.png) into an easily understandable trace including archived data objects, such as what is shown [here](https://goa.nceas.ucsb.edu/#view/urn:uuid:3249ada0-afe3-4dd6-875e-0f7928a4c171).
+At NCEAS and in the datateam, not only do we archive data and code openly, but we also describe the workflows that involve that data and code using provenance, formalizing the provenance trace for a workflow that might look like this ![](images/workflow.png) into an easily understandable trace including archived data objects, such as what is shown [here](https://goa.nceas.ucsb.edu/#view/urn:uuid:3249ada0-afe3-4dd6-875e-0f7928a4c171).
 
 There are two ways that we add provenance in the datateam - the prov editor and the R `datapack` package.
 
 ## The Prov Editor
 
-Provenance can easily be added to production Arctic Data Center packages using the provenance editor on [beta.arcticdata.io](beta.arcticdata.io). On the landing page of a data package within beta, in the `dataTable` or `otherEntity` section where you would like to add a provenance relationship, you can choose to add either a "source" or a "derivation", to the left or right of the object pane, respectively. 
+Provenance can easily be added to production Arctic Data Center packages using the provenance editor on [beta.arcticdata.io](https://beta.arcticdata.io/catalog/#data). On the landing page of a data package within beta, in the `dataTable` or `otherEntity` section where you would like to add a provenance relationship, you can choose to add either a "source" or a "derivation", to the left or right of the object pane, respectively. 
 
-![add prov](images/add_prov.png)
+![](images/add_prov.png)
 
-To add a source data file, click on the circle with the "+ add" text. Similarly, a source script would be added by selecting the arrow. Selecting the circle to add a source file pulls up the following screen, where you can select the source from other data objects within the same data package. ![add source](images/add_source.png)
+To add a source data file, click on the circle with the "+ add" text. Similarly, a source script would be added by selecting the arrow. Selecting the circle to add a source file pulls up the following screen, where you can select the source from other data objects within the same data package. ![](images/add_source.png)
 
-A data package with an object that has multiple sources added will look like this. ![sources](images/prov_sources.png)
+A data package with an object that has multiple sources added will look like this. ![](images/prov_sources.png)
 
-For simple packages on the Arctic Data Center, adding prov through the prov editor at [beta.arcticdata.io](beta.arcticdata.io) is super easy!
+For simple packages on the Arctic Data Center, adding prov through the prov editor at [beta.arcticdata.io](https://beta.arcticdata.io/catalog/#data) is super easy!
 
 ## Understanding resource maps
 
-Before we dive further into constructing prov in R, we need to talk more about resource maps.
+Before we dive further into constructing prov in R, we need to talk more about resource maps (or "resmaps").
 
-All Data Packages have a single Resource Map. But what is a Resource Map and how do we use one to find out what Objects are in a particular Data Package? This document is a short introduction but a more complete guide can be found [here](https://releases.dataone.org/online/api-documentation-v2.0/design/DataPackage.html?highlight=resource%20map).
+All data packages have a single resource map. But what is a resource map and how do we use one to find out what objects are in a particular data package? This document is a short introduction but a more complete guide can be found [here](https://releases.dataone.org/online/api-documentation-v2.0/design/DataPackage.html?highlight=resource%20map).
 
-A Resource Map is a special kind of XML document that describes (amongst other things) an Aggregation. The Aggregation describes the members of a Data Package (metadata and data, usually). We can use the `dataone` R package to download a Resource Map if we know its PID:
+A resource map is a special kind of XML document that describes (among other things) an "aggregation". The aggregation describes the members of a data package (metadata and data, usually). We can use the `dataone` R package to download a resource map if we know its `PID`:
 
 ```{r, eval = F}
 library(dataone)
 
-mn <- MNode("https://test.arcticdata.io/metacat/d1/mn/v2")
-pid <- "urn:uuid:82bd7d7f-9e18-4fd2-8bda-99b1fddab556" # A Resource Map PID
+mnT <- MNode("https://test.arcticdata.io/metacat/d1/mn/v2")
+pid <- "urn:uuid:82bd7d7f-9e18-4fd2-8bda-99b1fddab556" # A resource map PID
 
 path <- tempfile(fileext = ".xml") # We're saving to a temporary file but you can save elsewhere
-writeLines(rawToChar(getObject(mn, pid)), path) # Write the object to `path`
+writeLines(rawToChar(getObject(mnT, pid)), path) # Write the object to `path`
 ```
 
-If we open that file up on a text editor, we see this:
+If we open that file up in a text editor, we see this:
 
 ```
 <?xml version="1.0" encoding="utf-8"?>
@@ -97,41 +97,33 @@ If we open that file up on a text editor, we see this:
 </rdf:RDF>
 ```
 
-Whoa. What is this thing and how do you read it? The short of it is that, if you want to find the members of the Data Package, you want to look for lines like this:
-
-
+Whoa! What is this thing and how do you read it to find the members of the data package? The short answer is to look for lines like this:
 
 ```
 <rdf:Description rdf:about="https://cn.dataone.org/cn/v2/resolve/urn%3Auuid%3A82bd7d7f-9e18-4fd2-8bda-99b1fddab556#aggregation">
     <ore:aggregates rdf:resource="https://cn.dataone.org/cn/v2/resolve/urn%3Auuid%3Ac59b7505-39e6-4def-bc82-b67a8d117ce5"/>
 ```
 
-This line says "The Aggregation aggregates `urn:uuid:c59b7505-39e6-4def-bc82-b67a8d117ce5`" so that means `urn:uuid:c59b7505-39e6-4def-bc82-b67a8d117ce5` is in our Data Package! The key bit is the `<rdf:Description rdf:about="...#aggregation` part. If you look for another similar statement, you'll also see that `urn:uuid:61b48e72-ea29-4ba5-8131-4f59a9ebcd27` is part of our Data Package.
+This line says "The aggregation aggregates `urn:uuid:c59b7505-39e6-4def-bc82-b67a8d117ce5`" so that means `urn:uuid:c59b7505-39e6-4def-bc82-b67a8d117ce5` is in our data package! The key bit is the `<rdf:Description rdf:about="...#aggregation` part. If you look for another similar statement, you'll also see that `urn:uuid:61b48e72-ea29-4ba5-8131-4f59a9ebcd27` is part of our data package.
 
-Now we know *which* Objects are in our Data Package but we don't know which one is metadata and which one is data. For that, we need to get a copy of the System Metadata for each object:
+Now we know *which* objects are in our data package but we don't know which one contains metadata and which one contains data. For that, we need to get a copy of the system metadata for each object:
 
 ```{r, eval=FALSE}
-library(dataone)
-
-mn <- MNode("https://test.arcticdata.io/metacat/d1/mn/v2")
-getSystemMetadata(mn, "urn:uuid:c59b7505-39e6-4def-bc82-b67a8d117ce5")@formatId
-[1] "eml://ecoinformatics.org/eml-2.1.1"
-
-getSystemMetadata(mn, "urn:uuid:61b48e72-ea29-4ba5-8131-4f59a9ebcd27")@formatId
-[1] "application/octet-stream"
+getSystemMetadata(mnT, "urn:uuid:c59b7505-39e6-4def-bc82-b67a8d117ce5")@formatId
+getSystemMetadata(mnT, "urn:uuid:61b48e72-ea29-4ba5-8131-4f59a9ebcd27")@formatId
 ```
 
-From the format IDs, we can see the first PID is metadata and the second PID is data. Now we know enough to know what's in the Data Package:
+From the `formatId`s, we can see the first `PID` is the EML (`formatId`: `[1]"eml://ecoinformatics.org/eml-2.1.1"`) and the second `PID` is a data object (`formatId`: `[1]"application/octet-stream"`). Now we know enough to know what's in the data package:
 
-* Resource Map: urn:uuid:82bd7d7f-9e18-4fd2-8bda-99b1fddab556
-* Metadata: urn:uuid:c59b7505-39e6-4def-bc82-b67a8d117ce5
-* Data: urn:uuid:61b48e72-ea29-4ba5-8131-4f59a9ebcd27
+* Resource map: `urn:uuid:82bd7d7f-9e18-4fd2-8bda-99b1fddab556`
+* Metadata: `urn:uuid:c59b7505-39e6-4def-bc82-b67a8d117ce5`
+* Data: `urn:uuid:61b48e72-ea29-4ba5-8131-4f59a9ebcd27`
 
 Now that you've actually seen a resource map, we can dive further into prov.
 
 ## `datapack`
 
-For packages not on the ADC, or packages that are extremely complicated, it may be best to upload prov relationships using R. The `datapack` package has several functions which help add relationships in a very simple way. These relationships are stored in the resource map. When you update a package just by adding prov, the package will not get any new identifiers with the exception of the resource map.
+For packages not on the ADC, or packages that are extremely complicated, it may be best to upload prov relationships using R. The `datapack` package has several functions which help add relationships in a very simple way. These relationships are stored in the resource map. When you update a package to only add prov, the package will not be assigned any new identifiers **with the exception of the resource map**.
 
 First, we set the environment, in a similar, but slightly different way than what you may be used to. Here the function `D1Client` sets the DataONE client with the coordinating node instance as the first argument, and membernode as the second argument.
 
@@ -141,7 +133,7 @@ library(datapack)
 d1c <- D1Client("STAGING2", "urn:node:mnTestKNB")
 ```
 
-Next, get the pid of the resource map of the data package you are adding prov to, and load that package into R using the `getDataPackage` function.
+Next, get the `PID` of the resource map of the data package you are adding prov to, and load that package into R using the `getDataPackage` function.
 
 ```{r, eval = F}
 resmapId <- "urn:uuid:8f501606-2c13-4454-b22d-050a4176a97b"
@@ -181,13 +173,13 @@ Relationships:
 9 urn:uuid:8f501606-...4-b22d-050a4176a97b cito:isDocumentedBy urn:uuid:8f501606-...4-b22d-050a4176a97b
 ```
 
-In this example above, the data package has two .csv files, with an R script that converts one to the other. To create our provenance trace, first we need to select the source object, and save the pid to a variable. We do this using the `selectMember` function, and we can query part of the system metadata to select the file that we want. This function takes the data package (`pkg`), the name of the sysmeta field to query (in this case we use the `fileName`), and the value that you want to match that field to (in this case, 'PWS_Weir_Tower_export.csv').
+In this example above, the data package has two .csv files, with an R script that converts one to the other. To create our provenance trace, first we need to select the source object, and save the `PID` to a variable. We do this using the `selectMember` function, and we can query part of the system metadata to select the file that we want. This function takes the data package (`pkg`), the name of the sysmeta field to query (in this case we use the `fileName`), and the value that you want to match that field to (in this case, 'PWS_Weir_Tower_export.csv').
 
 ```{r, eval = F}
 sourceObjId <- selectMember(pkg, name="sysmeta@fileName", value='PWS_Weir_Tower_export.csv')
 ```
 
-This returns a list of the source object pids that match the query (in this case only one object matches).
+This returns a list of the source object `PID`s that match the query (in this case only one object matches).
 
 ```
 > sourceObjId
@@ -200,19 +192,19 @@ Now we need to select our output object. Here, we use the `selectMember` functio
 outputObjId <- selectMember(pkg, name="sysmeta@fileName", value='PWS_weirTower.csv')
 ```
 
-Now we query for the R script. In this case, we query based on the value of the `formatId` as opposed to the filename. This can be useful if you wish to select a large list of pids that are all similar.
+Now we query for the R script. In this case, we query based on the value of the `formatId` as opposed to the `fileName`. This can be useful if you wish to select a large list of `PID`s that are all similar.
 
 ```{r, eval=F}
 programObjId <- selectMember(pkg, name="sysmeta@formatId", value="application/R")
 ```
 
-Next, you use these lists of pids and a function called `describeWorkflow` to add these relationships to the data package. Note that if you do not have a program in the workflow, or a source file, you can simply leave those arguments blank.
+Next, you use these lists of `PID`s and a function called `describeWorkflow` to add these relationships to the data package. Note that if you do not have a program in the workflow, or a source file, you can simply leave those arguments blank.
 
 ```{r, eval = F}
 pkg <- describeWorkflow(pkg, sources=sourceObjId, program=programObjId, derivations=outputObjId)
 ```
 
-Viewing `pkg` again confirms that these relationships have been inserted into the data package, as shown by the "wasDerivedFrom" and "wasGeneratedBy" statements. It is always a good idea to print `pkg` to confirm that your pid selection process worked as expected, and your prov relationships make sense.
+Viewing `pkg` again confirms that these relationships have been inserted into the data package, as shown by the `wasDerivedFrom` and `wasGeneratedBy` statements. It is always a good idea to print `pkg` to confirm that your `PID` selection process worked as expected, and your prov relationships make sense.
 
 ```
 Relationships (updated):
@@ -240,26 +232,25 @@ Relationships (updated):
 7  urn:uuid:8f50160...b22d-050a4176a97b       cito:isDocumentedBy urn:uuid:8f50160...b22d-050a4176a97b
 ```
 
-Finally, you can upload the data package using the `uploadDataPackage` function, which takes the DataONE client `d1c` we set in the beginning, the updated `pkg` variable, and some options for public read and whether informational messages are printed during the upload process.
+Finally, you can upload the data package using the `uploadDataPackage` function, which takes the DataONE client `d1c` we set in the beginning, the updated `pkg` variable, some options for public read, and whether or not informational messages are printed during the upload process. **First, you will need to run a token obtained from https://dev.nceas.ucsb.edu/ to publish to that node.**
 
 ```{r, eval = F}
 resmapId_new <- uploadDataPackage(d1c, pkg, public=TRUE, quiet=FALSE)
 ```
 
-If successful you should be able to navigate to the landing page of your dataset, and icons should show up where the sources and derivations are, such as in this example ![prov_works](images/prov_inputoutput.png)
+If successful you should be able to navigate to the landing page of your dataset, and icons should show up where the sources and derivations are, such as in this example: ![](images/prov_inputoutput.png)
 
 ### Fixing mistakes
 
-If you messed up updating a datapackage using `datapack`, there unfortunately isn't a great way to undo your work, as the `describeWorkflow` only adds prov relationships, it does not replace them. If you messed up, the best course of action is to update the resource map with a clean version that does not have prov using `update_resource_map`, and then go through the steps outlined above again.
+If you messed up updating a data package using `datapack`, there unfortunately isn't a great way to undo your work, as the `describeWorkflow` only adds prov relationships, it does not replace them. If you messed up, the best course of action is to update the resource map with a clean version that does not have prov using `update_resource_map`, and then go through the steps outlined above again.
 
-Note: this has not been thorougly tested, and more extreme actions may be necessary to fully nuke the prov relationships. See Jeanette if things do not work as expected.
-
+Note: this has not been thorougly tested, and more extreme actions may be necessary to fully nuke the prov relationships. See Jeanette or Peter if things do not work as expected.
 
 
 ## References
 
-Ioannidis, John P A. 2005. “Why Most Published Research Findings Are False.” PLoS Medicine 2 (8): e124. doi:10.1371/journal.pmed.0020124.
+Ioannidis, John P A. 2005. “Why Most Published Research Findings Are False.” PLoS Medicine 2 (8): e124. https://doi.org/10.1371/journal.pmed.0020124.
 
-Hampton, Stephanie E, Sean Anderson, Sarah C Bagby, Corinna Gries, Xueying Han, Edmund Hart, Matthew B Jones, et al. 2015. “The Tao of Open Science for Ecology.” Ecosphere 6 (July). doi:http://dx.doi.org/10.1890/ES14-00402.1.
+Hampton, Stephanie E, Sean Anderson, Sarah C Bagby, Corinna Gries, Xueying Han, Edmund Hart, Matthew B Jones, et al. 2015. “The Tao of Open Science for Ecology.” Ecosphere 6 (July). https://doi.org/10.1890/ES14-00402.1.
 
-Munafò, Marcus R., Brian A. Nosek, Dorothy V. M. Bishop, Katherine S. Button, Christopher D. Chambers, Nathalie Percie du Sert, Uri Simonsohn, Eric-Jan Wagenmakers, Jennifer J. Ware, and John P. A. Ioannidis. 2017. “A Manifesto for Reproducible Science.” Nature Human Behaviour 1 (1): 0021. doi:10.1038/s41562-016-0021.
+Munafò, Marcus R., Brian A. Nosek, Dorothy V. M. Bishop, Katherine S. Button, Christopher D. Chambers, Nathalie Percie du Sert, Uri Simonsohn, Eric-Jan Wagenmakers, Jennifer J. Ware, and John P. A. Ioannidis. 2017. “A Manifesto for Reproducible Science.” Nature Human Behaviour 1 (1): 0021. https://doi.org/10.1038/s41562-016-0021.
