--- a/workflows/misc_file_types/netCDF_chunk.Rmd
+++ b/workflows/misc_file_types/netCDF_chunk.Rmd
@@ -1,27 +1,25 @@
 
-## netCDFs
+## NetCDFs
 
-This section is for dealing with netCDF (.nc) files. These files require data tables but since they can not be simply opened on the computer using a text editor or Excel, you can use Panoply to explore them or these R commands:
+This section is for dealing with NetCDF (.nc) files. These files require data tables but since they can not be simply opened on the computer using a text editor or Excel, you can use Panoply to explore them or the R commands. First be sure to install and load the `ncdf4` R package.
 
 ```{r, eval=FALSE}
-filepath <- '/home/.../ICECAPS_precip_product_2010_2015.nc' 
-
 # gets attribute info
-atts <- arcticdatautils::get_ncdf4_attributes(filepath)
+atts <- arcticdatautils::get_ncdf4_attributes('filepath')
 # preview of View(atts)
 atts[1:10,]
 ```
 
-![](../../images/netcdf_full_att_preview.png)
+![](https://raw.githubusercontent.com/NCEAS/datateam-training/master/images/netCDF_full_att_preview.png)
 
 ```{r, eval=FALSE}
 # returns the actual values for a specified attribute
 t <- ncdf4::nc_open(filepath)
-test <- ncdf4::ncvar_get(t, 't2m')
+test <- ncdf4::ncvar_get(t, 'attributeName')
 # preview of View(test)
 test[1:10]
 ```
 
-![](../../images/netcdf_value_preview.png)
+![](https://raw.githubusercontent.com/NCEAS/datateam-training/master/images/netcdf_value_preview.png)
 
-The `formatId` in the sysmeta will most likely be `netCDF-4`.
+The `formatId` in the sysmeta will most likely be `netCDF-4`, but could be `netCDF-3`.
