--- a/workflows/misc_file_types/netCDF_chunk.Rmd
+++ b/workflows/misc_file_types/netCDF_chunk.Rmd
@@ -1,9 +1,10 @@
 
 ## NetCDFs
 
-This section is for dealing with NetCDF (.nc) files. These files require data tables but since they can not be simply opened on the computer using a text editor or Excel, you can use Panoply to explore them or the R commands. First be sure to install and load the `ncdf4` R package.
+This section is for dealing with NetCDF (.nc) files. These files require data tables but since they can not be simply opened on the computer using a text editor or Excel, you can use Panoply to explore them or the R commands. 
 
 ```{r, eval=FALSE}
+library(ncdf4)
 # gets attribute info
 atts <- arcticdatautils::get_ncdf4_attributes('filepath')
 # preview of View(atts)
