--- a/workflows/misc_file_types/spatial_data.Rmd
+++ b/workflows/misc_file_types/spatial_data.Rmd
@@ -4,7 +4,7 @@ Shapefiles and their associated files can be kept in a single grouping using *.z
 
 ```{r eval = FALSE}
 library(rgdal)
-root_folder_path <- "dir1/dir2/"
+folder_path <- "/folder/path/dir1/dir2/"
 folder_name <- "folder_name" #name of folder containing shapefiles and associated data
 spatial_obj <- readOGR(dsn = paste0(folder_path, folder_name),
               layer = folder_name)
