--- a/workflows/solr_queries/use_facets.Rmd
+++ b/workflows/solr_queries/use_facets.Rmd
@@ -1,6 +1,6 @@
 ## Use facets
 
-We can also summarize what's in Solr with [faceting](https://lucene.apache.org/solr/guide/7_3/faceting.html), which lets us **group** Solr documents together and **count** them. This is like `table` in R. Faceting can do a query within a query, but more commonly it's used to summarize unique values in a field. For example, we can find the unique format IDs on Data Objects:
+We can also summarize what's in Solr with [faceting](https://lucene.apache.org/solr/guide/7_3/faceting.html), which lets us **group** Solr documents together and **count** them. This is like `table` in R. Faceting can do a query within a query, but more commonly it's used to summarize unique values in a field. For example, we can find the unique `formatId`s on data objects:
 
 - https://arcticdata.io/metacat/d1/mn/v2/query/solr/?q=*:*&fq=formatType:DATA&facet=true&facet.field=formatId&rows=0
 
@@ -9,10 +9,10 @@ To facet, we usually do a few things:
 - Add the parameter `facet=true`
 - Add the parameter `facet.field={FIELD}` with the field we want to facet (group) on
 - Set `rows=0` because we don't care about the matched Solr documents
-- Optionally specify `fq={expression}` which filters out Solr documents before faceting. In the above example, we have to do this to only count Data Objects. Without it, the facet result would include formatIDs for metadata and resource maps which we don't want.
+- Optionally specify `fq={expression}` which filters out Solr documents before faceting. In the above example, we have to do this to count only data objects. Without it, the facet result would include `formatId`s for metadata and resource maps, which we don't want.
 
 ```{block, type = "note"}
 Currently, the `dataone::query()` function does not support faceting, so you'll have to run your queries as a URL. 
 
-For additional ways to use faceting (such as pivot faceting), check out the [Solr documentation](https://lucene.apache.org/solr/guide/7_3/the-stats-component.html#the-stats-component).
+For additional ways to use faceting (such as [pivot faceting](https://lucene.apache.org/solr/guide/7_3/faceting.html#combining-stats-component-with-pivots)), check out the [Solr documentation](https://lucene.apache.org/solr/guide/7_3/faceting.html).
 ```
