--- a/training/02_create_data_packages_in_r.Rmd
+++ b/training/02_create_data_packages_in_r.Rmd
@@ -67,6 +67,33 @@ mnT <- dataone::getMNode(cn,'urn:node:mnTestARCTIC')
 ```{r, child = '../workflows/edit_data_packages/create_a_resource_map.Rmd'}
 ```
 
+## SASAP package workflows
+Sometimes many data sets are associated with a larger project, such as the State of Alaska Salmon and People (SASAP) project. These data sets should be given additional project-specific information using `eml@dataset@project`. This will add pre-defined information including the project title, funding sources, and key personnel. You will also want to set access permissions to the project as well. If you are working on a SASAP data set, prior to writing the EML and publishing the data set you will set the project with this code:
+
+```{r, eval=FALSE}
+source('~/sasap-data/data-submission/Helpers/SasapProjectCreator.R')
+eml@dataset@project <- sasap_project()
+```
+
+Next you should add SASAP-specific taxonomic coverage to the EML using the `add_SASAP_taxa` function found in `sasap-data/data-submission/Helpers`. This will ensure that any salmon species present in the dataset have their Latin and common names listed in the coverage and can be easily searched for. Run everything in the `add_SASAP_taxa.R` script prior to running `eml <- add_SASAP_taxa(eml)`.
+
+Then, update the access permissions in the system metadata using `set_rights_and_access`.
+
+```{r, eval=FALSE}
+pkg <- get_package(mnT, resource_map_pid)
+set_rights_and_access(mnT, unlist(pkg), 'CN=SASAP,DC=dataone,DC=org', permissions = c('read', 'write', 'changePermission'))
+```
+
+To test for package structure correctness (system metadata, resource maps, distribution URLS) and congruence of the package's data and metadata, run the `qa_package()` function from the `datamgmt` package. 
+
+```{r, eval=FALSE}
+qa_package(mn, RESOURCE_MAP_PID)
+```
+
+Note that there are some issues with the function that are documented [here](https://github.com/NCEAS/datamgmt/issues/145). 
+
+Finally, go through the [SASAP checklist](https://github.nceas.ucsb.edu/NCEAS/sasap-data/blob/master/data-submission/checklist.Rmd) to ensure that the package meets all of the project-specific requirements for publishing.
+
 ## Exercise 2 {.exercise}
 
 * Locate the data package you published in [Exercise 1](#exercise-1) by navigating to the "My Profile > My Data" section on [test.arcticdata.io](https://test.arcticdata.io).
