--- a/training/02_create_data_packages_in_r.Rmd
+++ b/training/02_create_data_packages_in_r.Rmd
@@ -80,14 +80,14 @@ Next you should add SASAP-specific taxonomic coverage to the EML using the `add_
 Then, update the access permissions in the system metadata using `set_rights_and_access`.
 
 ```{r, eval=FALSE}
-pkg <- get_package(mnT, resource_map_pid)
-set_rights_and_access(mnT, unlist(pkg), 'CN=SASAP,DC=dataone,DC=org', permissions = c('read', 'write', 'changePermission'))
+pkg <- get_package(mn, resource_map_pid)
+set_rights_and_access(mn, unlist(pkg), 'CN=SASAP,DC=dataone,DC=org', permissions = c('read', 'write', 'changePermission'))
 ```
 
 To test for package structure correctness (system metadata, resource maps, distribution URLS) and congruence of the package's data and metadata, run the `qa_package()` function from the `datamgmt` package. 
 
 ```{r, eval=FALSE}
-qa_package(mn, RESOURCE_MAP_PID)
+qa_package(mn, resource_map_pid)
 ```
 
 Note that there are some issues with the function that are documented [here](https://github.com/NCEAS/datamgmt/issues/145). 
