--- a/training/02_create_data_packages_in_r.Rmd
+++ b/training/02_create_data_packages_in_r.Rmd
@@ -84,15 +84,32 @@ pkg <- get_package(mn, resource_map_pid)
 set_rights_and_access(mn, unlist(pkg), 'CN=SASAP,DC=dataone,DC=org', permissions = c('read', 'write', 'changePermission'))
 ```
 
-To test for package structure correctness (system metadata, resource maps, distribution URLS) and congruence of the package's data and metadata, run the `qa_package()` function from the `datamgmt` package. 
+Finally, go through the [SASAP checklist](https://github.nceas.ucsb.edu/NCEAS/sasap-data/blob/master/data-submission/checklist.Rmd) to ensure that the package meets all of the project-specific requirements for publishing.
 
+After your package is published, run the `qa_package()` function from the `datamgmt` package. 
+
+The function arguments are as follows:
+```{r, eval=FALSE}
+qa_package <- function(node, pid, readAllData = TRUE,
+                       check_attributes = TRUE,
+                       check_creators = FALSE,
+                       check_access = FALSE)
+```
+
+By default, `qa_package` checks for:
+- Correctness of distribution URLs for each data object (URLs must match the EML physical section for the object)
+- Congruence of metadata and data 
+
+The `check_creators` and `check_access` flags can be set to `TRUE` to check: 
+- Correctness of ORCIDs of creators in a given EML
+- Rights and access are set for creators for a give pid sysmeta
+
+In most cases, QA package will be run just by passing in a member node and the resource map pid.
 ```{r, eval=FALSE}
 qa_package(mn, resource_map_pid)
 ```
 
 Note that there are some issues with the function that are documented [here](https://github.com/NCEAS/datamgmt/issues/145). 
-
-Finally, go through the [SASAP checklist](https://github.nceas.ucsb.edu/NCEAS/sasap-data/blob/master/data-submission/checklist.Rmd) to ensure that the package meets all of the project-specific requirements for publishing.
 
 ## Exercise 2 {.exercise}
 
